<resources>
    <string name="app_name">Freshman_guide_chatbot</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="paragraph">an egyptian faculty that is interested in technologies with its all forms and types and it became the most important faculties in egypt nowadays, the study in it began in September 1996.\nIt Provides the highest level of education in computer science, information systems, scientific calculations, and computer systems for its graduates, and prepare them for the changing needs of the community,\nand push them to the relevant areas including business administration.\nCollege seeks to provide the best environment to encourage creativity and excellence and moral obligation.\nFaculty of Computer and Information Sciences, Ain Shams University is unique to have 5 distinct programs for Thanawya Amma students under the auspices of Dr.Mahmoud EL Mateni , President of the university , supervised by Dr.Nagwa Badr ,Dean of the faculty and Dr. Rasha Ismail ,Director of the programs.\nFaculty of computer and information sciences announces it\'s distinct programs by credit hours system: \n- Software Engineering \n- Artificial Intelligence \n- Cyber Security \n- Digital multi media \nFaculty of computer and information sciences also provides Bioinformatics program which accepts Thanawya Amma science section.</string>
    <string name="faculty_of_computer_science_is">Faculty Of Computer Science is :</string>
    <string name="what_is_computer_science">What is computer science?</string>
    <string name="whoAreWe">Who are we ?</string>
    <string name="best_wishes">We hope you like it \nand wish you the best</string>
    <!--<string name="default_web_client_id" translatable="false">831367515508-s1maknpj58ueidn1irh5q03oec5mishi.apps.googleusercontent.com</string>
-->
    <string name="About_Us">  We were students like you in the Faculty of CS. We faced a lot of problems in our freshman year, So we decided to create this app to help you navigate through the faculty\'s campus without running into the same issues we faced.
 </string>


</resources>