<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Fragments.InformationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light"
        android:padding="@dimen/browser_actions_context_menu_min_padding"
        android:text="@string/whoAreWe"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textStyle="bold"

        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="555dp"
        android:layout_below="@+id/article_heading"
        android:layout_marginTop="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="5sp"

                android:text="@string/About_Us"

                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/article2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="233dp"
                android:fontFamily="casual"
                android:lineSpacingExtra="5sp"
                android:text="@string/best_wishes"
                android:textAlignment="center"
                android:textColor="@color/gradient_end_color"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>